eks_cicd/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: USERS
    app.kubernetes.io/instance: USERS-instance
    app.kubernetes.io/version: '1.0.0'
    app.kubernetes.io/managed-by: kubectl
  name: users-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: USERS
  template:
    metadata:
      labels:
        app: USERS
    spec:
      containers:
        - image: 737971166371.dkr.ecr.us-east-1.amazonaws.com/users:latest
          imagePullPolicy: Always
          name: users
          ports:
            - containerPort: 5000
