eks_cicd/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jboss-ingress
  annotations:
    USERS.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /app
        backend:
          serviceName: users
          servicePort: 8080
